--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -28,6 +28,7 @@ header {
   column-gap: end;
   background: lavender;
   padding-left: 12px;
+  padding-right: 12px;
   padding-top: 6px;
   padding-bottom: 6px;
 }
@@ -150,23 +151,6 @@ a:hover {
   margin-top: 8px;
 }
 
-.order-button {
-  background-color: rgb(71, 71, 71);
-  border: solid 1px rgb(0, 218, 0);
-  border-radius: 3px;
-  padding: 10px;
-  height: 36px;
-  font-weight: bold;
-  color: rgb(0, 218, 0);
-  cursor: pointer;
-  transition: background-color 0.25s;
-}
-
-.order-button:hover {
-  background-color: rgb(0, 218, 0);
-  color: rgb(71, 71, 71);
-}
-
 .contents-div {
   margin-top: 30px;
   display: grid;
@@ -223,19 +207,6 @@ textarea {
   height: 131px;
 }
 
-label {
-  color: lime;
-}
-
-input, input:active {
-  background-color: rgb(71, 71, 71);
-  color: aquamarine;
-  border: solid 1px lime;
-  border-radius: 4px;
-  width: 210px;
-  height: 20px;
-}
-
 .social-media-logo {
   width: 26px;
   height: 26px;
@@ -273,4 +244,87 @@ input, input:active {
   grid-template-columns: 1fr 1fr;
   column-gap: 70px;
   margin-top: 6px;
+}
+
+@media screen and (max-width: 600px) {
+  section {
+    width: 100%;
+  }
+
+  .intro-div {
+    display: inline;
+  }
+
+  .intro-h3_1, .intro-h3_2 {
+    display: block;
+    width: 400px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    font-size: 34px;
+  }
+
+  .intro-picture-div {
+    background-image: url("../images/picture1.jpg");
+    background-position: center;
+    width: 405px;
+    height: 240px;
+    border-radius: 5px;
+    margin-left: 3px;
+  
+    box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+  }
+
+  .product-image {
+    width: 87px;
+    height: 50px;
+    border-radius: 3px;
+    opacity: 0.92;
+    mask-image: inherit;
+  }
+
+  .summery-div {
+    padding: 50px;
+    display: inline;
+  }
+
+  .summery-picture-div {
+    background-image: url("../images/picture2.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 403px;
+    height: 233px;
+    border-radius: 4px;
+    margin-left: 3px;
+    margin-bottom: 16px;
+  
+    box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+  }
+
+  .about-inside-div{
+    width: 376px;
+    margin-left: 3px;
+  }
+
+  .our-info-div {
+    display: inline;
+    margin-top: 30px;
+    margin-bottom: 40px;
+  }
+
+  .footer-about-us-paragraph {
+    width: 260px;
+    font-size: large;
+    margin-left: 40px;
+    text-align: center;
+  }
+
+  .footer-about-div {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
 }
