made it responsive commit 2

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -257,7 +257,7 @@ textarea {
 
   .intro-h3_1, .intro-h3_2 {
     display: block;
-    width: 400px;
+    width: 85%;
     margin-bottom: 20px;
     margin-left: 10px;
     font-size: 34px;
@@ -266,8 +266,8 @@ textarea {
   .intro-picture-div {
     background-image: url("../images/picture1.jpg");
     background-position: center;
-    width: 405px;
-    height: 240px;
+    width: 100%;
+    height: 260px;
     border-radius: 5px;
     margin-left: 3px;
   
@@ -277,8 +277,8 @@ textarea {
   }
 
   .product-image {
-    width: 87px;
-    height: 50px;
+    width: 100%;
+    height: 56px;
     border-radius: 3px;
     opacity: 0.92;
     mask-image: inherit;
@@ -293,11 +293,14 @@ textarea {
     background-image: url("../images/picture2.jpg");
     background-size: cover;
     background-position: center;
-    width: 403px;
+    width: 80%;
     height: 233px;
     border-radius: 4px;
-    margin-left: 3px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 16px;
+    display: block;
+
   
     box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
@@ -305,8 +308,10 @@ textarea {
   }
 
   .about-inside-div{
-    width: 376px;
-    margin-left: 3px;
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .our-info-div {
