--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -36,11 +36,13 @@ header {
 .logo {
   border-left: solid 1px black;
   border-radius: 2px;
+  background-color: lavender;
 }
 
 .logo-text {
   -webkit-text-stroke: 1px lime;
   font-size: 26px;
+  background-color: lavender;
 }
 
 .nav-bar {
@@ -49,6 +51,7 @@ header {
   column-gap: 20px;
   margin-top: 6px;
   list-style: none;
+  background-color: lavender;
 }
 
 .nav-bar-div_text-decoration {
@@ -266,7 +269,7 @@ textarea {
   .intro-picture-div {
     background-image: url("../images/picture1.jpg");
     background-position: center;
-    width: 100%;
+    width: 90%;
     height: 260px;
     border-radius: 5px;
     margin-left: 3px;
@@ -330,6 +333,15 @@ textarea {
   .footer-about-div {
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+
+  header {
+    display: block;
+    background: lavender;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 2px;
+    padding-bottom: 13px;
   }
 
 }
