--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -11,6 +11,23 @@ p, h1, h2, h3, h4, h5, h6, ul, body, a {
   margin-right: 0px;
 }
 
+button {
+  height: 30px;
+  width: 200px;
+  border: none;
+  color: white;
+  background-color: rgb(53, 156, 53);
+  border-radius: 4px;
+  margin: 6px;
+  transition: all 0.15s;
+}
+
+button:hover{
+  border: 1px solid white;
+  color: white;
+  cursor: pointer;
+}
+
 body {
   background-color: rgb(53, 156, 53);
   padding: 0px;
@@ -28,7 +45,7 @@ header {
   column-gap: end;
   background: lavender;
   padding-left: 12px;
-  padding-right: 12px;
+  padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
 }
@@ -36,13 +53,11 @@ header {
 .logo {
   border-left: solid 1px black;
   border-radius: 2px;
-  background-color: lavender;
 }
 
 .logo-text {
   -webkit-text-stroke: 1px lime;
   font-size: 26px;
-  background-color: lavender;
 }
 
 .nav-bar {
@@ -50,8 +65,8 @@ header {
   grid-template-columns: auto auto auto auto;
   column-gap: 20px;
   margin-top: 6px;
+  margin-right: 24px;
   list-style: none;
-  background-color: lavender;
 }
 
 .nav-bar-div_text-decoration {
@@ -135,9 +150,19 @@ a:hover {
 .product-image {
   width: 327px;
   height: 180px;
+  border: solid 1px lime;
   border-radius: 3px;
   opacity: 0.92;
   mask-image: inherit;
+  transition: opacity 0.15s;
+
+  box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+}
+
+.product-image:hover {
+  opacity: 1;
 }
 
 .product-info {
@@ -176,10 +201,17 @@ a:hover {
   width: 530px;
   height: 290px;
   border-radius: 4px;
+  opacity: 0;
 
   box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+
+  transition: opacity 1s;
+}
+
+.summery-picture-div:hover {
+  opacity: 1;
 }
 
 .about-us-heading{
@@ -210,6 +242,47 @@ textarea {
   height: 131px;
 }
 
+.samples {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+  padding: 20px;
+
+  background: rgb(27,27,27);
+  background: linear-gradient(90deg, rgba(27,27,27,1) 0%, rgba(53,121,63,1) 51%, rgba(0,226,19,1) 99%);
+
+  animation-name: background-animation;
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+
+.sample-image {
+  width: 100%;
+  height: auto;
+  border: solid 1px lime;
+
+  box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+}
+
+@keyframes background-animation {
+  50% {
+    background: rgb(27,27,27);
+    background: linear-gradient(90deg, rgba(27,27,27,1) 0%, rgba(53,121,63,1) 51%, rgba(0,226,19,1) 99%);
+  }
+  50% {
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(56,96,58,1) 63%, rgba(49,172,58,1) 99%);
+  }
+  50% {
+    background: rgb(0,226,19);
+    background: linear-gradient(90deg, rgba(0,226,19,1) 0%, rgba(53,121,63,1) 51%, rgba(0,0,0,1) 99%);
+  }
+}
+
 .social-media-logo {
   width: 26px;
   height: 26px;
@@ -235,6 +308,8 @@ textarea {
   font-size: large;
   margin-left: 304px;
   text-align: center;
+  font-weight: bolder;
+  color: rgb(255, 255, 255);
 }
 
 .footer-about-div, .footer-contact-details-div {
@@ -293,21 +368,13 @@ textarea {
   }
 
   .summery-picture-div {
-    background-image: url("../images/picture2.jpg");
-    background-size: cover;
-    background-position: center;
     width: 80%;
     height: 233px;
-    border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 16px;
     display: block;
-
-  
-    box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 2px 8px 0px rgba(0,0,0,0.75);
+    opacity: 1;
   }
 
   .about-inside-div{
@@ -386,6 +453,10 @@ textarea {
     display: inline;
     margin-top: 30px;
     margin-bottom: 40px;
+  }
+
+  .samples {
+    display: inline;
   }
 
   .footer-about-div {
